--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,16 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&family=Noto+Sans+HK:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&family=Noto+Sans+HK:wght@100..900&family=Noto+Serif+HK:wght@200..900&family=VT323&display=swap');
 
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+    }
+
+    #chinesefont {
+        font-family: "Noto Sans HK", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: normal;
+        font-style: normal;
     }
 
     body {
@@ -13,6 +19,23 @@
         font-style: normal;
         background-color: #e5e5e5;
         font-size:inherit;
+    }
+
+    a {
+        color: #7451f5;
+        text-decoration: none;
+        transition: .2s;
+    }
+
+    a:hover {
+        color: #0b0080;
+        text-decoration: underline;
+        font-weight: 600;
+    }
+
+    a:active {
+        color: #0b0080;
+        text-decoration: underline;
     }
 
     .main-content-column {
@@ -29,16 +52,36 @@
         top: 0 ;
         display: flex;
         justify-content: flex-start;
-        padding: 1rem;
         background: #a4276e;
         height: 4rem;
         margin: 0 auto;
     }
 
     .logo a img {
-        max-height: 3rem;
+        display: flex;
+        align-items: center;
         border-radius: 100%;
-        top: 0;
+        max-width: 3rem;
+        margin-right: .5rem;
+    }
+
+    .logo a {
+        font-family: "VT323", monospace;
+        font-weight: 400;
+        font-style: normal;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: #fff;
+        padding: 9px;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        font-size: 24px;
+    }
+
+    .logo a:hover {
+        color: #e8b6d2;
     }
 
     .menu {
@@ -49,14 +92,15 @@
     }
 
     .menu li {
-        margin-left: 1rem;
         font-weight: 400;
         color: inherit;
         color: #e8b6d2;
+        transition: .2s;
+        margin: 1rem;
     }
 
     .menu li a:hover {
-        color: #e0b0cb;
+        color: #f4ddea;
 
     }
 
@@ -66,6 +110,7 @@
         font-weight: 500;
         margin-right: .5rem;
         line-height: 30px;
+        transition: 0.2;
     }
 
     section {
@@ -83,30 +128,32 @@
         box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.05);
     }
 
+    .banner {
+        padding-top: 0;
+    }
+
     .banner-info h1 {
         color: #a4276e;
-        border-bottom: 2px solid #e8b6d2;
-    }
-
-    .banner-info h2 {
-        color: #a4276e;
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 2px solid #e8b6d2;
-    }
-
-    .banner-content h {
-        border-bottom: 2px solid #e8b6d2;
-        font-size: 18px;
-    }
-
-    .banner-content p {
-        margin-top: 1rem;
+        border-bottom: 2px solid #fff;
+        font-size: 36px;
     }
 
     .body-content {
         display: flex;
         height: auto;
+    }
+
+    .main-content h {
+        color: #a4276e;
+        font-size: 36px;
+        font-weight: 700;
+        border-left: 2px solid #e8b6d2;
+        padding-left: 1rem;
+        transition: .2s;
+    }
+
+    .main-content h:hover {
+        color: #1a1a1a;
     }
 
     .main-content, .content {
@@ -125,6 +172,13 @@
         margin-bottom: 1rem;
     }
 
+    a.tournament-link {
+        text-align: left;
+        display: flex;
+        padding-left: 1rem;
+        align-items: center;
+    }
+
     .content {
         box-sizing: border-box;
         background-color: #f5f5f5;
@@ -141,6 +195,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-bottom: 0;
     }
 
     .content img {
@@ -170,17 +225,6 @@
 
     }
 
-    .hongkong {
-        display: inline-flex;
-        line-height: 18px;
-    }
-
-    .hongkong img {
-        max-width: 28px;
-        max-height: 16px;
-        padding-right: 4px;
-    }
-
     .social-icon {
         height: 2rem;
         margin-top: 5px;
@@ -190,6 +234,84 @@
         width: auto;
         display: flex;
         justify-content: center;
+        transition: .2s;
+    }
+
+    .social-icon img {
+        padding: 5px;
+        border-radius: 5px;
+    }
+
+    .social-icon img:hover {
+        background-color: #f4ddea;
+        padding: 5px;
+        border-radius: 5px;
+    }
+
+
+    .history {
+        display: flex;
+        justify-content: center;
+    }
+
+    .history table {
+        margin-top: 0;
+        width: 100%;
+        border-collapse:initial;
+    }
+
+    .history th, td {
+        border: none;
+        padding: 2px 6px;
+    }
+
+    .information {
+        display: flex;
+        justify-content: center;
+        margin-top: 0;
+        width: 100%;
+        border-collapse:initial;
+    }
+
+    .information-icon {
+        height: 16px;
+        width: auto;
+        max-width: 28px;
+        padding-right: 4px;
+    }
+
+    .information th, td {
+        border: none;
+        padding: 5px 3px;
+        height: 1rem;
+    }
+
+    .information #left {
+        text-align: right;
+        font-weight: 600;
+        width: 50%;
+        font-size: 16px;
+    }
+
+    .information #right {
+        display: inline-flex;
+        justify-content: flex-start;
+        text-align: left;
+        font-size: 16px;
+    }
+
+    .history #left {
+        text-align: right;
+        width: 50%;
+        font-size: 13px;
+        font-style: italic;
+        color: #2b2b2b;
+    }
+
+    .history #right {
+        text-align: left;
+        width: 50%;
+        font-size: 14px;
     }
 
     table {
@@ -199,7 +321,8 @@
     }
 
     th, td {
-        border: 1px solid #dddddd;
+        border-top: 1px solid #dddddd;
+        border-bottom: 1px solid #dddddd;
         text-align: center;
         margin: 8px;
         place-items: center;
@@ -218,6 +341,41 @@
         padding: .5rem;
     }
 
+    .retired {
+        background-color: #eeeeee;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-content: center;
+        height: 3rem;
+    }
+
+    .retired p {
+        padding-left: 2px;
+        display: flex;
+        align-items: center;
+        align-content: center;
+    }
+
+    .retired h3 {
+        display: flex;
+        font-size: 18px;
+        color: #a4276e;
+        align-items: center;
+        align-content: center;
+        padding-right: 2px;
+    }
+
+    .tournament-link {
+        text-decoration: none;
+        color: #7451f5;
+        transition: .2s;
+    }
+
+    .tournament-link:hover {
+        color: #0b0080;
+    }
+
     .main-content-img {
         display: flex;
         justify-content: center;
@@ -226,4 +384,20 @@
     .ref-text {
         text-align: center;
         margin-top: .5rem;
+    }
+    
+    .team-logo {
+        width: 3rem;
+        height: auto;
+        max-height: 3rem;
+        padding: 8px;
+    }
+
+    footer {
+        background-color: #a4276e;
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem;
+        color: #fff;
+        align-content: center;
     }
