--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
         max-width: 100%;
     }
 
-    h2 {color: #a4276e;}
+    h2, h3 {color: #a4276e;}
 
     a {
         color: #7451f5;
@@ -467,6 +467,7 @@
         text-decoration: none;
         color: #a4276e;
         transition: .5s;
+        font-weight: 500;
     }
 
     #footer div p a {
@@ -483,9 +484,6 @@
         color: #1a1a1a;
     }
 
-    #footer div p:hover {
-        color: #1a1a1a;
-    }
 
     #logo {
         font-family: "VT323", monospace;
@@ -523,8 +521,8 @@
 
     #svg {
         fill: #a4276e;
-        margin-right: .5rem;
-        transition: .5s;
+        margin-right: 10px;
+        transition: .2s;
     }
 
     #svg:hover {
