--- a/css/sharkcup.css
+++ b/css/sharkcup.css
@@ -1,6 +1,22 @@
 html, body {
-    background-color: #494042;
-    color: #fff;
+    background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
+    background-blend-mode: normal,color-burn;
+    
+    color: #241f21;
+}
+
+#nav {
+    position: fixed;
+    transition: 0.5s;
+}
+
+.hidden {
+    opacity: 0;
+    transition: .5s;
+  }
+
+nav:after {
+    display: fixed;
 }
 
 .shark-container {
@@ -15,10 +31,11 @@ html, body {
 }
 
 .shark-content h2 {
-    margin-top: 1rem;
-    color: #d4fa6f;
     transition: .2s;
 }
+
+h2, h3 {color: #241f21;}
+h3 {font-weight: 500; font-size: 20px;}
 
 .shark-logo {
     height: 30vw;
@@ -31,26 +48,34 @@ html, body {
     align-items: center;
 }
 
+.content-button p {margin-left: .5rem;}
+
 .content-button a {
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: #fff;
+    color: #241f21;
     font-size: 24px;
     font-weight: 600;
     margin: 1rem;
-    background-color: #7c6ef5;
+    background-color: #d4fa6f;
     border-radius: 100px;
     transition: .2s;
     padding: 8px;
     width: 15rem;
+    svg {
+        height: 2rem;
+        fill: #241f21;
+        transition: .2s;
+    }
 }
 
 .content-button a:hover {
-    background-color:#d4fa6f;
-    color: black;
+    background-color:#7c6ef5;
+    color: #fff;
+    svg {
+        fill: #fff;
+    }
 }
-
-
