--- a/css/sharkcup.css
+++ b/css/sharkcup.css
@@ -79,3 +79,8 @@ h3 {font-weight: 500; font-size: 20px;}
         fill: #fff;
     }
 }
+
+#date-tour {
+    margin-top: .5rem;
+    color: #7c6ef5;
+}
